<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_decrypt_file"
        android:showAsAction="ifRoom|withText"
        android:title="@string/title_decrypt_file"/>
    <item
        android:id="@+id/menu_import_key_from_file"
        android:icon="@android:drawable/ic_input_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/title_import_keys"/>
    <item
        android:id="@+id/menu_export_keys_to_file"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom|withText"
        android:title="@string/title_export_keys"/>
    <item
        android:id="@+id/menu_receive_key"
        android:icon="@android:drawable/arrow_down_float"
        android:showAsAction="ifRoom|withText"
        android:title="@string/receive_key"/>
    <item
        android:id="@+id/menu_send_key"
        android:icon="@android:drawable/arrow_up_float"
        android:showAsAction="ifRoom|withText"
        android:title="@string/send_key"/>
    <item
        android:id="@+id/menu_create_key"
        android:showAsAction="ifRoom|withText"
        android:title="@string/title_create_key"/>
    <item
        android:id="@+id/menu_change_passphrase"
        android:showAsAction="ifRoom|withText"
        android:title="@string/title_change_passphrase"/>
    <item
        android:id="@+id/menu_run_test"
        android:showAsAction="ifRoom|withText"
        android:title="Run Tests"/>
    <item
        android:id="@+id/menu_share_log"
        android:icon="@android:drawable/ic_menu_send"
        android:showAsAction="ifRoom|withText"
        android:title="Share Test Log"/>
    <item
        android:id="@+id/menu_settings_key"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom|withText"
        android:title="@string/title_settings"/>

</menu>