<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createKeyLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/addCommentLayout"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="5sp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/key_name_label"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/key_email_label"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/key_type_label"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/key_size_label"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/key_expire_label"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5sp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/keyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/keyEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/keyType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:singleLine="true"
                android:text="@string/key_type_default"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/keySize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:singleLine="true"
                android:text="@string/key_size_2048"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/keyExpire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:singleLine="true"
                android:text="@string/key_expire_never"
                android:textSize="20sp"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addCommentLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkboxes"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/addComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/key_add_comment" />

        <LinearLayout
            android:id="@+id/commentLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5sp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/key_comment_label"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/keyComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:inputType="textEmailSubject"
                android:singleLine="true"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkboxes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createKeyButton"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/keyRevokeGen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="false"
            android:text="@string/key_revoke_gen" />

        <CheckBox
            android:id="@+id/keyUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_upload" />

        <CheckBox
            android:id="@+id/keyMakeBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/key_make_backup" />
    </LinearLayout>

    <Button
        android:id="@+id/createKeyButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10sp"
        android:padding="20sp"
        android:text="@string/title_create_key"
        android:textSize="20sp" />

</RelativeLayout>